# nes-emulator-rs

./: .gitignore  Cargo.toml  README.md  run.sh
src/: app.rs  chip6502.rs  main.rs
test/: get-test.sh
