[package]
name = "NES_emulator_rust"
version = "0.1.0"
edition = "2021"

[features]
strict = []

[lints.clippy]
correctness = "deny"
suspicious = "deny"

style = "deny"
perf = "deny"
complexity = "deny"

pedantic = "deny" # Start with warn and deny specific lints as you see fit
# Restriction lints
arithmetic_side_effects = "deny"
expect_used = "deny"
get_unwrap = "deny"
panic = "deny"
unreachable = "deny"

# Pedantic lints
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
must_use_candidate = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"

